<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.AddFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rating_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:numStars="5"
        app:layout_constraintStart_toStartOf="@id/rating_text"
        app:layout_constraintTop_toBottomOf="@id/rating_text" />

    <TextView
        android:id="@+id/recommend_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recommend"
        app:layout_constraintTop_toBottomOf="@id/rating_bar" />

    <RadioGroup
        android:id="@+id/recommend_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/recommend_text">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/recommend_radio_group" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/comment"
        app:layout_constraintTop_toBottomOf="@id/comment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintStart_toEndOf="@id/add"
        app:layout_constraintTop_toTopOf="@id/add" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="@id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>